# ecommerce

./: README.md  pyproject.toml
core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_avaliation.py  0003_auto_20250224_1708.py  0004_alter_avaliation_product.py  0005_client_email.py  0006_alter_avaliation_rating_alter_client_cpf.py
ecommerce/: README.md
loja/: settings.py  urls.py
